clusters/homelab/apps/media/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: media
  labels:
    traefik.tafu.casa/instance: internal
spec:
  ingressClassName: traefik-internal
  tls:
    - hosts:
        - sonarr.cl.tafu.casa
      secretName: wildcard-cl-tafu-casa-tls
  rules:
    - host: sonarr.cl.tafu.casa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
